Update company name and logo in index.html

--- a/index.html
+++ b/index.html
@@ -3,32 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skillhunt - Engineering Solutions & Numerical Modeling Training</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f0f0; }
-        header { background: #333; color: #fff; padding: 20px; text-align: center; }
-        .container { max-width: 1200px; margin: auto; padding: 20px; }
-        footer { text-align: center; padding: 20px; background: #333; color: white; position: relative; bottom: 0; width: 100%; }
-    </style>
+    <title>PT Skillnova Digital</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Skillhunt</h1>
-        <p>Your partner in engineering solutions and numerical modeling training</p>
+        <img src="custom_logo.svg" alt="PT Skillnova Digital Logo" />
+        <h1>Welcome to PT Skillnova Digital</h1>
     </header>
-    <div class="container">
-        <section>
-            <h2>Our Services</h2>
-            <p>At Skillhunt, we offer specialized training services focused on computational fluid dynamics (CFD) and engineering solutions tailored to meet your needs.</p>
-            <ul>
-                <li>CFD-Inspired Design</li>
-                <li>Numerical Modeling Training</li>
-                <li>Customized Engineering Solutions</li>
-            </ul>
-        </section>
-    </div>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>At PT Skillnova Digital, we focus on innovation and quality.</p>
+    </section>
     <footer>
-        <p>&copy; 2026 Skillhunt. All rights reserved.</p>
+        <p>&copy; 2026 PT Skillnova Digital. All rights reserved.</p>
     </footer>
 </body>
 </html>
