Update index.html to reflect PT Skillnova Digital branding and structure.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PT Skillnova Digital</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        header {
+            background-color: #0066AA;
+            color: #ffffff;
+            padding: 20px;
+            text-align: center;
+        }
+        section {
+            padding: 20px;
+            margin: 10px;
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #0066AA;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <img src="custom_logo.svg" alt="PT Skillnova Digital Logo" />
-        <h1>Welcome to PT Skillnova Digital</h1>
+        <h1>PT Skillnova Digital</h1>
+        <img src="logo.svg" alt="Skillnova Logo" style="width: 150px; height: auto;" />
     </header>
     <section id="about">
         <h2>About Us</h2>
-        <p>At PT Skillnova Digital, we focus on innovation and quality.</p>
+        <p>We are a digital agency focused on delivering innovative solutions in water engineering.</p>
+    </section>
+    <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Digital Branding</li>
+            <li>Web Development</li>
+            <li>Consultation in Water Engineering</li>
+        </ul>
+    </section>
+    <section id="expertise">
+        <h2>Our Expertise</h2>
+        <p>We specialize in integrating technology with water management.</p>
+    </section>
+    <section id="portfolio">
+        <h2>Our Portfolio</h2>
+        <p>Check out our latest projects.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: contact@skillnova.com</p>
     </section>
     <footer>
         <p>&copy; 2026 PT Skillnova Digital. All rights reserved.</p>
