Update index.html with complete PT Skillnova Digital website

--- a/index.html
+++ b/index.html
@@ -3,39 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skillnova Digital</title>
+    <title>PT Skillnova Digital</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #e0f7fa;
+            background: linear-gradient(to right, #00aaff, #0047ab);
+            color: #ffffff;
         }
         header {
-            background-color: #00796b;
-            color: white;
-            padding: 1rem;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+            background: rgba(0, 71, 171, 0.8);
+        }
+        h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+        nav ul {
+            list-style-type: none;
+            display: flex;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            margin-left: 20px;
         }
         nav a {
-            color: white;
-            padding: 0.5rem 1rem;
+            color: #ffffff;
             text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav a:hover {
+            color: #ffcc00;
         }
         .hero {
-            background-color: #004d40;
-            color: white;
-            padding: 5rem 0;
+            height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
+            background: url('hero-image.jpg') no-repeat center center/cover;
         }
-        .services, .expertise, .portfolio, .about, .contact {
-            padding: 2rem;
+        .hero h2 {
+            font-size: 3em;
+            margin: 0;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        }
+        .services {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            padding: 20px;
+            gap: 20px;
+        }
+        .service-item {
+            background: rgba(0, 71, 171, 0.6);
+            border-radius: 10px;
+            padding: 20px;
+            transition: transform 0.3s ease;
+        }
+        .service-item:hover {
+            transform: scale(1.05);
+        }
+        .portfolio {
+            padding: 20px;
+        }
+        .portfolio img {
+            max-width: 100%;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+        .portfolio img:hover {
+            transform: scale(1.1);
         }
         footer {
-            background-color: #00796b;
-            color: white;
+            background: rgba(0, 71, 171, 0.8);
             text-align: center;
-            padding: 1rem;
+            padding: 20px;
+        }
+        @media (max-width: 768px) {
+            .hero h2 {
+                font-size: 2em;
+            }
         }
     </style>
 </head>
@@ -43,54 +96,39 @@
     <header>
         <h1>PT Skillnova Digital</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#services">Services</a>
-            <a href="#expertise">Expertise</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <section class="hero">
-        <h2>Welcome to Skillnova Digital</h2>
-        <p>Your partner in digital transformation.</p>
+        <h2>Innovating Your Digital Experience</h2>
     </section>
-    <section class="services">
-        <h3>Our Services</h3>
-        <div class="services-grid">
-            <div>Service 1</div>
-            <div>Service 2</div>
-            <div>Service 3</div>
-        </div>
+    <section id="services" class="services">
+        <div class="service-item">Service 1</div>
+        <div class="service-item">Service 2</div>
+        <div class="service-item">Service 3</div>
+        <div class="service-item">Service 4</div>
     </section>
-    <section class="expertise">
-        <h3>Our Expertise</h3>
-        <div class="expertise-showcase">
-            <div>Expertise 1</div>
-            <div>Expertise 2</div>
-            <div>Expertise 3</div>
-        </div>
+    <section id="portfolio" class="portfolio">
+        <h2>Our Portfolio</h2>
+        <img src="portfolio1.jpg" alt="Portfolio Item">
+        <img src="portfolio2.jpg" alt="Portfolio Item">
     </section>
-    <section class="portfolio">
-        <h3>Portfolio</h3>
-        <div class="portfolio-items">
-            <div>Project 1</div>
-            <div>Project 2</div>
-            <div>Project 3</div>
-        </div>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are a digital agency focused on creating beautiful online experiences.</p>
     </section>
-    <section class="about">
-        <h3>About Us</h3>
-        <p>We are a digital agency focused on delivering top-notch solutions.</p>
-    </section>
-    <section class="contact">
-        <h3>Contact Us</h3>
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
         <form>
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
-            <input type="submit" value="Submit">
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send</button>
         </form>
     </section>
     <footer>
