--- a/index.html
+++ b/index.html
@@ -5,90 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PT Skillnova Digital</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to right, #00aaff, #0047ab);
-            color: #ffffff;
-        }
-        header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px;
-            background: rgba(0, 71, 171, 0.8);
-        }
-        h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-        nav ul {
-            list-style-type: none;
-            display: flex;
-            margin: 0;
-            padding: 0;
-        }
-        nav ul li {
-            margin-left: 20px;
-        }
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #ffcc00;
-        }
-        .hero {
-            height: 70vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            background: url('hero-image.jpg') no-repeat center center/cover;
-        }
-        .hero h2 {
-            font-size: 3em;
-            margin: 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-        }
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            padding: 20px;
-            gap: 20px;
-        }
-        .service-item {
-            background: rgba(0, 71, 171, 0.6);
-            border-radius: 10px;
-            padding: 20px;
-            transition: transform 0.3s ease;
-        }
-        .service-item:hover {
-            transform: scale(1.05);
-        }
-        .portfolio {
-            padding: 20px;
-        }
-        .portfolio img {
-            max-width: 100%;
-            border-radius: 10px;
-            transition: transform 0.3s ease;
-        }
-        .portfolio img:hover {
-            transform: scale(1.1);
-        }
-        footer {
-            background: rgba(0, 71, 171, 0.8);
-            text-align: center;
-            padding: 20px;
-        }
+        body { font-family: Arial, sans-serif; margin: 0; }
+        header { background: #0066AA; color: white; padding: 10px; position: sticky; top: 0; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; }
+        nav ul li { display: inline; margin-right: 20px; }
+        .hero { background: linear-gradient(to bottom right, #0066AA, #0099CC); color: white; padding: 50px; text-align: center; }
+        .services { display: flex; justify-content: space-around; padding: 20px; }
+        .services div { background: #f4f4f4; padding: 20px; flex: 1; margin: 10px; }
+        .expertise, .portfolio { display: grid; grid-template-columns: repeat(4, 1fr); padding: 20px; }
+        .contact { padding: 20px; }
+        footer { background: #0066AA; color: white; text-align: center; padding: 10px; position: relative; }
         @media (max-width: 768px) {
-            .hero h2 {
-                font-size: 2em;
-            }
+            .services, .expertise { flex-direction: column; grid-template-columns: 1fr; }
         }
     </style>
 </head>
@@ -98,41 +26,56 @@
         <nav>
             <ul>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#expertise">Expertise</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section class="hero">
-        <h2>Innovating Your Digital Experience</h2>
+        <h2>Welcome to Skillnova Digital</h2>
+        <p>Your partner in digital transformation</p>
     </section>
     <section id="services" class="services">
-        <div class="service-item">Service 1</div>
-        <div class="service-item">Service 2</div>
-        <div class="service-item">Service 3</div>
-        <div class="service-item">Service 4</div>
+        <div><h3>Service 1</h3><p>Description of service 1.</p></div>
+        <div><h3>Service 2</h3><p>Description of service 2.</p></div>
+        <div><h3>Service 3</h3><p>Description of service 3.</p></div>
+    </section>
+    <section id="expertise" class="expertise">
+        <div>Expertise 1</div>
+        <div>Expertise 2</div>
+        <div>Expertise 3</div>
+        <div>Expertise 4</div>
+        <div>Expertise 5</div>
+        <div>Expertise 6</div>
+        <div>Expertise 7</div>
+        <div>Expertise 8</div>
     </section>
     <section id="portfolio" class="portfolio">
-        <h2>Our Portfolio</h2>
-        <img src="portfolio1.jpg" alt="Portfolio Item">
-        <img src="portfolio2.jpg" alt="Portfolio Item">
+        <div>Project 1</div>
+        <div>Project 2</div>
+        <div>Project 3</div>
+        <div>Project 4</div>
+        <div>Project 5</div>
+        <div>Project 6</div>
     </section>
-    <section id="about">
+    <section id="about" class="about">
         <h2>About Us</h2>
-        <p>We are a digital agency focused on creating beautiful online experiences.</p>
+        <p>Information about PT Skillnova Digital.</p>
     </section>
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
         <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
+            <input type="text" placeholder="Your Name" required /><br />
+            <input type="email" placeholder="Your Email" required /><br />
+            <textarea placeholder="Your Message" required></textarea><br />
+            <button type="submit">Send Message</button>
         </form>
+        <p>Contact details: [email/contact info]</p>
     </section>
     <footer>
-        <p>&copy; 2026 PT Skillnova Digital. All rights reserved.</p>
+        <p>&copy; 2026 PT Skillnova Digital</p>
     </footer>
 </body>
 </html>
