--- a/index.html
+++ b/index.html
@@ -3,79 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PT Skillnova Digital</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; }
-        header { background: #0066AA; color: white; padding: 10px; position: sticky; top: 0; z-index: 1000; }
-        nav ul { list-style: none; padding: 0; }
-        nav ul li { display: inline; margin-right: 20px; }
-        .hero { background: linear-gradient(to bottom right, #0066AA, #0099CC); color: white; padding: 50px; text-align: center; }
-        .services { display: flex; justify-content: space-around; padding: 20px; }
-        .services div { background: #f4f4f4; padding: 20px; flex: 1; margin: 10px; }
-        .expertise, .portfolio { display: grid; grid-template-columns: repeat(4, 1fr); padding: 20px; }
-        .contact { padding: 20px; }
-        footer { background: #0066AA; color: white; text-align: center; padding: 10px; position: relative; }
-        @media (max-width: 768px) {
-            .services, .expertise { flex-direction: column; grid-template-columns: 1fr; }
-        }
-    </style>
+    <title>Professional Water Engineering Consulting</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>PT Skillnova Digital</h1>
-        <nav>
-            <ul>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#expertise">Expertise</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="logo">
+            <img src="sh_logo.png" alt="SH Logo">
+        </div>
+        <h1>Professional Water Engineering Consulting</h1>
+        <p>Your solution for all water resource challenges.</p>
     </header>
+
     <section class="hero">
-        <h2>Welcome to Skillnova Digital</h2>
-        <p>Your partner in digital transformation</p>
+        <div class="hero-content">
+            <h2>Transforming Water Challenges into Innovative Solutions</h2>
+        </div>
     </section>
-    <section id="services" class="services">
-        <div><h3>Service 1</h3><p>Description of service 1.</p></div>
-        <div><h3>Service 2</h3><p>Description of service 2.</p></div>
-        <div><h3>Service 3</h3><p>Description of service 3.</p></div>
+
+    <section class="services">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+            <div class="service">
+                <h3>Consulting</h3>
+                <p>Expert guidance on water-related projects.</p>
+            </div>
+            <div class="service">
+                <h3>Design</h3>
+                <p>Innovative design solutions for water systems.</p>
+            </div>
+            <div class="service">
+                <h3>Analysis</h3>
+                <p>Comprehensive analysis for efficient management.</p>
+            </div>
+        </div>
     </section>
-    <section id="expertise" class="expertise">
-        <div>Expertise 1</div>
-        <div>Expertise 2</div>
-        <div>Expertise 3</div>
-        <div>Expertise 4</div>
-        <div>Expertise 5</div>
-        <div>Expertise 6</div>
-        <div>Expertise 7</div>
-        <div>Expertise 8</div>
+
+    <section class="expertise">
+        <h2>Our Expertise</h2>
+        <div class="expertise-grid">
+            <div class="expert">
+                <h3>Hydrology</h3>
+            </div>
+            <div class="expert">
+                <h3>Environmental Engineering</h3>
+            </div>
+            <div class="expert">
+                <h3>Water Resource Management</h3>
+            </div>
+        </div>
     </section>
-    <section id="portfolio" class="portfolio">
-        <div>Project 1</div>
-        <div>Project 2</div>
-        <div>Project 3</div>
-        <div>Project 4</div>
-        <div>Project 5</div>
-        <div>Project 6</div>
+
+    <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <div class="portfolio-cards">
+            <div class="card">
+                <h3>Project Title 1</h3>
+                <p>Brief description of project.</p>
+            </div>
+            <div class="card">
+                <h3>Project Title 2</h3>
+                <p>Brief description of project.</p>
+            </div>
+        </div>
     </section>
-    <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>Information about PT Skillnova Digital.</p>
-    </section>
-    <section id="contact" class="contact">
+
+    <section class="contact">
         <h2>Contact Us</h2>
         <form>
-            <input type="text" placeholder="Your Name" required /><br />
-            <input type="email" placeholder="Your Email" required /><br />
-            <textarea placeholder="Your Message" required></textarea><br />
-            <button type="submit">Send Message</button>
+            <label for="project-type">Project Type:</label>
+            <select id="project-type">
+                <option value="service1">Service 1</option>
+                <option value="service2">Service 2</option>
+            </select>
+            <label for="budget">Budget:</label>
+            <select id="budget">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+            </select>
+            <input type="submit" value="Submit">
         </form>
-        <p>Contact details: [email/contact info]</p>
     </section>
-    <footer>
-        <p>&copy; 2026 PT Skillnova Digital</p>
-    </footer>
 </body>
 </html>
