--- a/index.html
+++ b/index.html
@@ -3,87 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Water Engineering Consulting</title>
+    <title>Water Engineering Consulting</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="sh_logo.png" alt="SH Logo">
-        </div>
         <h1>Professional Water Engineering Consulting</h1>
-        <p>Your solution for all water resource challenges.</p>
+        <nav>
+            <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Transforming Water Challenges into Innovative Solutions</h2>
-        </div>
+    <section id="hero">
+        <h2>Your Trusted Water Engineering Experts</h2>
+        <p>Comprehensive solutions for all your water resource needs.</p>
     </section>
-
-    <section class="services">
+    <section id="services">
         <h2>Our Services</h2>
-        <div class="services-grid">
-            <div class="service">
-                <h3>Consulting</h3>
-                <p>Expert guidance on water-related projects.</p>
-            </div>
-            <div class="service">
-                <h3>Design</h3>
-                <p>Innovative design solutions for water systems.</p>
-            </div>
-            <div class="service">
-                <h3>Analysis</h3>
-                <p>Comprehensive analysis for efficient management.</p>
-            </div>
+        <div class="service-item">
+            <h3>Consultation</h3>
+            <p>Expert advice on water management and resources.</p>
+        </div>
+        <div class="service-item">
+            <h3>Project Management</h3>
+            <p>Overseeing projects from conception to completion.</p>
+        </div>
+        <div class="service-item">
+            <h3>Sustainability Practices</h3>
+            <p>Implementing eco-friendly water solutions.</p>
         </div>
     </section>
-
-    <section class="expertise">
-        <h2>Our Expertise</h2>
-        <div class="expertise-grid">
-            <div class="expert">
-                <h3>Hydrology</h3>
-            </div>
-            <div class="expert">
-                <h3>Environmental Engineering</h3>
-            </div>
-            <div class="expert">
-                <h3>Water Resource Management</h3>
-            </div>
-        </div>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are dedicated to providing professional consulting services in water engineering, with a focus on sustainability and innovation.</p>
     </section>
-
-    <section class="portfolio">
-        <h2>Our Portfolio</h2>
-        <div class="portfolio-cards">
-            <div class="card">
-                <h3>Project Title 1</h3>
-                <p>Brief description of project.</p>
-            </div>
-            <div class="card">
-                <h3>Project Title 2</h3>
-                <p>Brief description of project.</p>
-            </div>
-        </div>
+    <section id="projects">
+        <h2>Our Projects</h2>
+        <p>Explore our portfolio of successful water management projects.</p>
     </section>
-
-    <section class="contact">
+    <section id="contact">
         <h2>Contact Us</h2>
         <form>
-            <label for="project-type">Project Type:</label>
-            <select id="project-type">
-                <option value="service1">Service 1</option>
-                <option value="service2">Service 2</option>
-            </select>
-            <label for="budget">Budget:</label>
-            <select id="budget">
-                <option value="low">Low</option>
-                <option value="medium">Medium</option>
-                <option value="high">High</option>
-            </select>
-            <input type="submit" value="Submit">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message"></textarea>
+            <button type="submit">Submit</button>
         </form>
     </section>
+    <footer>
+        <p>&copy; 2026 Water Engineering Consulting. All rights reserved.</p>
+    </footer>
 </body>
 </html>
